--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 
 <div class="game" >  
+
   <div class="board" id="board">
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
+
 
       <div class="card"></div>
       <div class="card"></div>
@@ -27,11 +29,13 @@
       <div class="card"></div>
       <div class="card" ></div>
       <div class="card"></div>
+
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
   </div> 
+
   <div class="remaining_tries"> 
       Mistakes remaining:
      <span class="dot"></span>
@@ -42,8 +46,16 @@
 
   <div class="Buttons"> 
     <div class="button", id="shuffle"> Shuffle </div> 
-    <div class="button" id="deselect"> Deselect All</div>
-    <div class="button" id="button"> Submit</div>
+    <div class="hidden_button" id="deselect"> Deselect All</div>
+    <div class="hidden_button" id="submit"> Submit</div>
+  </div>
+
+  <div class="MessageBox" id="away">
+      One Away...
+  </div>
+
+  <div class="MessageBox" id="already">
+      Already Guessed!
   </div>
 
   <br>
