--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   </head>
   <body>
 
-
 <div class="container" >  
 <div class="game" >  
-
+    <p> Match pairs of four!</p>
   <div class="board" id="board">
     <div class="card"></div>
     <div class="card"></div>
@@ -67,7 +66,7 @@
   <div class="overlay-container" id="overlay-container">
         <div class="pop-up" id="win">You Win!</div>
         <div class="pop-up" id="lose">Better luck next time!</div>
-
+        <div class="pop-up button" id="again">Play Again</div>
         <div class="overlay">
     </div>
   </div>
