--- a/pretty_generator.html
+++ b/pretty_generator.html
@@ -8,13 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100..900&display=swap" rel="stylesheet">
     <script type="module" src="website/generator.js"></script>
+    <title> Connections Generator</title>
   </head>
   <body>
+      <h1>Connections Generator</h1>
+      <p> fill in the categories and then start playing!</p>
 
 
 <div class="container" >  
 <div class="game" >  
-
   <div class="board" id="board">
       <div class="matched-set " id="blue"> 
           <input type="text" placeholder="theme" class="theme">
