--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html hidden>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100..900&display=swap" rel="stylesheet">
@@ -15,12 +18,13 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title> Connections Generator</title>
   </head>
-  <body>
+  <header>
       <h1>Connections Generator</h1>
       <p> Make your game then start playing!</p>
 
+  </header>
+  <body>
 
-<div class="container" >  
 <div class="game" >  
   <div class="board" id="board">
       <div class="matched-set " id="blue"> 
@@ -79,8 +83,6 @@
   </div>
 
   <a class="hidden_button" id="random_game" target="_blank">Play a Random Game</a>
-  </div>
-
   </body>
 </html>
 
