--- a/game.html
+++ b/game.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html hidden>
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,22 +16,19 @@
 <div class="game" >  
     <p> Match pairs of four!</p>
   <div class="board" id="board">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
 
-
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
-
       <div class="card"></div>
       <div class="card"></div>
       <div class="card" ></div>
       <div class="card"></div>
-
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
