--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <header>
       <h1>Connections Generator</h1>
-      <p> Make your game then start playing!</p>
+      <p> Make your game, then start playing!</p>
 
   </header>
   <body>
