bunch of new stuff

--- a/site/game.html
+++ b/site/game.html
@@ -45,8 +45,8 @@
 
   <div class="Buttons"> 
     <div class="button", id="shuffle"> Shuffle </div> 
-    <div class="hidden_button" id="deselect"> Deselect All</div>
-    <div class="hidden_button" id="submit"> Submit</div>
+    <div class="button hidden" id="deselect"> Deselect All</div>
+    <div class="button hidden" id="submit"> Submit</div>
   </div>
 
   <div class="MessageBox" id="away">
@@ -66,9 +66,10 @@
         <div class="pop-up" id="win">You Win!</div>
         <div class="pop-up" id="lose">Better luck next time!</div>
         <div class="Buttons">
-            <div class="pop-up button" id="again">Play Again</div>
-            <div class="pop-up button" id="share">Share Link</div>
-            <div class="pop-up button" id="back">Make a New Puzzle</div>
+            <div class="pop-up button enabled" id="again">Play Again</div>
+            <div class="pop-up button enabled" id="share">Share Link</div>
+            <div class="pop-up button enabled" id="back">Make a New Puzzle</div>
+            <div class="pop-up button enabled" id="edit-me">Edit This Puzzle</div>
         </div>
         <div class="overlay">
     </div>
