--- a/site/index.html
+++ b/site/index.html
@@ -83,6 +83,8 @@
   </div>
 
   <a class="hidden_button" id="random_game" target="_blank">Play a Random Game</a>
+
+  <dialog class="pop-up" id="copier">Copied to clipboard!</dialog>
   </body>
 </html>
 
