--- a/site/game.html
+++ b/site/game.html
@@ -67,7 +67,7 @@
             <div class="end button" id="see-board">View Board</div>
             <div class="end button enabled" id="share">Copy Link</div>
             <div class="end button enabled" id="edit-me">Edit This Puzzle</div>
-            <div class="end button enabled" id="back">Make another Puzzle</div>
+            <div class="end button enabled" id="new-puzzle">Make another Puzzle</div>
             <dialog class="pop-up" id="copied">Copied to clipboard!</dialog>
         </div>
     </dialog>
