--- a/site/index.html
+++ b/site/index.html
@@ -76,9 +76,9 @@
       </div>
   </div> 
   <div class="Buttons">
-  <a class="hidden_button" id="go_to_game" target="_blank">Play Game </a>
+  <div class="hidden_button" id="go_to_game" target="_blank">Try Game </div>
   <div class="button" id="submit"> Generate Game!</div>
-  <a class="hidden_button" id="copy_link" target="_blank">Copy Game Link </a>
+  <div class="hidden_button" id="copy_link" target="_blank">Copy Game Link </div>
   </div>
 
   <a class="hidden_button" id="random_game" target="_blank">Play a Random Game</a>
