--- a/site/index.html
+++ b/site/index.html
@@ -76,51 +76,20 @@
       </div>
   </div> 
   <div class="Buttons">
-  <div class="hidden_button" id="go_to_game" target="_blank">Try Game </div>
+      <div class="button hidden" id="try_game" target="_blank">Try Game </div>
   <div class="button" id="submit"> Generate Game!</div>
-  <div class="hidden_button" id="copy_link" target="_blank">Copy Game Link </div>
+  <div class="button hidden" id="copy_link" target="_blank">
+      <p>Copy Game Link </p>
+
+        <dialog class="pop-up" id="copier">Copied to clipboard!</dialog>
   </div>
 
-  <a class="hidden_button" id="random_game" target="_blank">Play a Random Game</a>
+  </div>
 
-  <dialog class="pop-up" id="copier">Copied to clipboard!</dialog>
+          <a class="button hidden" id="random_game" target="_blank">Play a Random Game</a>
+
+
 </div>
-
-
-<template id = "card">
-	<div class="card"></div>
-</template>
-
-<template id = "board-template">
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-</template>
-
-
-<template id = "remaining-tries">
-      Mistakes remaining:
-     <span class="dot"></span>
-     <span class="dot"></span>
-     <span class="dot"></span>
-     <span class="dot"></span> 
-</template>
 
 <template id = "connections-game">
 <div class="container" >  
