--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html >
+<html lang="en">
   <head>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100..900&display=swap" as="style">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
