--- a/site/index.html
+++ b/site/index.html
@@ -101,38 +101,38 @@
         <div class="board" id="board">
 
 
-          <connections-card i=0> </connections-card>
-          <connections-card i=1> </connections-card>
-          <connections-card i=2> </connections-card>
+          <connections-card i=0 tabindex=0> </connections-card>
+          <connections-card i=1 tabindex=0> </connections-card>
+          <connections-card i=2 tabindex=0> </connections-card>
 
-          <connections-card i=3> </connections-card>
+          <connections-card i=3 tabindex=0> </connections-card>
 
-          <connections-card i=4> </connections-card>
-
-
-          <connections-card i=5> </connections-card>
-
-          <connections-card i=6> </connections-card>
-
-          <connections-card i=7> </connections-card>
-
-          <connections-card i=8> </connections-card>
+          <connections-card i=4 tabindex=0> </connections-card>
 
 
-	  <connections-card i=9> </connections-card>
+          <connections-card i=5 tabindex=0> </connections-card>
 
-          <connections-card i=10> </connections-card>
+          <connections-card i=6 tabindex=0> </connections-card>
 
-          <connections-card i=11> </connections-card>
+          <connections-card i=7 tabindex=0> </connections-card>
 
-          <connections-card i=12> </connections-card>
+          <connections-card i=8 tabindex=0> </connections-card>
 
 
-          <connections-card i=13> </connections-card>
+	  <connections-card i=9 tabindex=0> </connections-card>
 
-          <connections-card i=14> </connections-card>
+          <connections-card i=10 tabindex=0> </connections-card>
 
-          <connections-card i=15> </connections-card>
+          <connections-card i=11 tabindex=0> </connections-card>
+
+          <connections-card i=12 tabindex=0> </connections-card>
+
+
+          <connections-card i=13 tabindex=0> </connections-card>
+
+          <connections-card i=14 tabindex=0> </connections-card>
+
+          <connections-card i=15 tabindex=0> </connections-card>
 
 
 
